--- a/Snake/index.html
+++ b/Snake/index.html
@@ -22,8 +22,10 @@
 
     <script src="./js/jquery-2.1.1.js"></script>
     <!-- Whackjobs at GithubPages don't understand symlinks... -->
+    <script src="./js/coord.js"></script>
+    <script src="./js/apple.js"></script>
     <script src="./js/snake.js"></script>
-    <script src="./js/underscore.js"></script>
+    <script src="./js/board.js"></script>
     <script src="./js/snake-view.js"></script>
 
     <script>
