--- a/Snake/index.html
+++ b/Snake/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Snake!</title>
     <link rel="stylesheet" type="text/css" href="./css/snake.css">
+    <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
   </head>
   <body>
 
